# khanWarsHighLevel

./: .gitignore  CMakeLists.txt  conanfile.py  main.cpp  test.cmake
.github/workflows/: cmake.yml
api/: CMakeLists.txt
app/: app.cpp  app.hpp
authentication/authentication/: CMakeLists.txt
authentication/authentication/include/: authentication.hpp
authentication/environmentVariable/: CMakeLists.txt  environmentVariableAuth.hpp
diagrams/: goal.puml  makeDiagram.sh
docs/diagrams/: makeDiagram.sh
domain/api/: CMakeLists.txt  api.cpp  api.hpp
domain/user/: CMakeLists.txt  user.cpp  user.hpp
infrastructure/authentication/: CMakeLists.txt
infrastructure/authentication/environmentVariable/: environmentVariableAuth.cpp
ui/app/: CMakeLists.txt
user/: user.hpp
